# ForgeServe

./: .dockerignore  README.md  pyproject.toml
benchmark_runner/: Dockerfile.benchmark  benchmark_entrypoint.py
examples/: README.md  comprehensive_deployment.yaml  ollama_cpu_only.yaml  vllm_basic_gpu.yaml
forgeserve/: __init__.py  __main__.py
forgeserve/adapters/: base.py  ollama.py  vllm.py
forgeserve/benchmark/: client.py  metrics.py
forgeserve/cli/: benchmark.py  delete.py  launch.py  list_deployments.py  logs.py  main.py  status.py
forgeserve/config/: __init__.py  loaders.py  models.py
forgeserve/core/: deployment_manager.py  resource_generator.py  status_manager.py
forgeserve/runners/: base.py  kubernetes.py
forgeserve/sdk/: __init__.py  client.py  exceptions.py
forgeserve/templates/: deployment.yaml.j2  job.yaml.j2  service.yaml.j2
