[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgeserve"
version = "0.0.1"
description = "Declarative Deployment & Management for LLM Serving Frameworks (vLLM, TGI, Ollama, etc.) on Kubernetes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nhat Nam", email = "vonhatnam.work@gmail.com" }
]
keywords = ["llm", "kubernetes", "vllm", "tgi", "ollama", "deployment", "inference", "mlops", "cli", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "jinja2==3.1.6",
    "kubernetes==32.0.1",
    "pydantic==2.11.3",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "typer==0.15.2",
]

[project.scripts]
forgeserve = "forgeserve.cli.main:app"

[project.urls]
Homepage = "https://github.com/vonhatnam1212/ForgeServe" 
Repository = "https://github.com/vonhatnam1212/ForgeServe"

[tool.hatch.version]
path = "forgeserve/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["forgeserve"]

[tool.ruff]
line-length = 88
target-version = "py310" 

[tool.ruff.lint]
select = [
    "E",  
    "W",  
    "F",  
    "I",  
    "C", 
    "B",  
    "UP", 
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
]
